[gd_scene load_steps=7 format=3 uid="uid://yq8hon3ubt66"]

[ext_resource type="Texture2D" uid="uid://cpkd42glccfi4" path="res://endCutscene/assets/David one.PNG" id="1_oralm"]
[ext_resource type="Script" uid="uid://yxmfoahtlbtr" path="res://endCutscene/davidScript.gd" id="1_traf8"]
[ext_resource type="Texture2D" uid="uid://51e2wjo3ma61" path="res://endCutscene/assets/David two.PNG" id="2_ysp01"]
[ext_resource type="Texture2D" uid="uid://d023dvpe6ec6k" path="res://endCutscene/assets/David three.PNG" id="3_traf8"]
[ext_resource type="Texture2D" uid="uid://drnyv008u3s8q" path="res://endCutscene/assets/David four.PNG" id="4_qnngv"]
[ext_resource type="AudioStream" uid="uid://ci6vsfba2k0xv" path="res://VoiceLines/DavidMonologue.wav" id="6_qnngv"]

[node name="DavidScene" type="Node2D"]
script = ExtResource("1_traf8")

[node name="bckgrnd" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(28.84, 16.12)
color = Color(0, 0, 0, 1)

[node name="bigDavidHolder" type="Node2D" parent="."]

[node name="David1" type="Sprite2D" parent="bigDavidHolder"]
self_modulate = Color(1, 1, 1, 0.490196)
position = Vector2(-300, 594.174)
scale = Vector2(0.737252, 0.737252)
texture = ExtResource("1_oralm")

[node name="David2" type="Sprite2D" parent="bigDavidHolder"]
self_modulate = Color(1, 1, 1, 0.490196)
position = Vector2(-300, 594.174)
scale = Vector2(0.737252, 0.737252)
texture = ExtResource("2_ysp01")

[node name="David3" type="Sprite2D" parent="bigDavidHolder"]
self_modulate = Color(1, 1, 1, 0.490196)
position = Vector2(-300, 594.174)
scale = Vector2(0.737252, 0.737252)
texture = ExtResource("3_traf8")

[node name="David4" type="Sprite2D" parent="bigDavidHolder"]
self_modulate = Color(1, 1, 1, 0.490196)
position = Vector2(-300, 594.174)
scale = Vector2(0.737252, 0.737252)
texture = ExtResource("4_qnngv")

[node name="littleDavidHolder" type="Node2D" parent="."]

[node name="David1" type="Sprite2D" parent="littleDavidHolder"]
position = Vector2(1400, 450)
scale = Vector2(0.45408, 0.45408)
texture = ExtResource("1_oralm")

[node name="David2" type="Sprite2D" parent="littleDavidHolder"]
position = Vector2(1400, 450)
scale = Vector2(0.45408, 0.45408)
texture = ExtResource("2_ysp01")

[node name="David3" type="Sprite2D" parent="littleDavidHolder"]
position = Vector2(1400, 450)
scale = Vector2(0.45408, 0.45408)
texture = ExtResource("3_traf8")

[node name="David4" type="Sprite2D" parent="littleDavidHolder"]
position = Vector2(1400, 450)
scale = Vector2(0.45408, 0.45408)
texture = ExtResource("4_qnngv")

[node name="endingTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="monologue" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qnngv")
autoplay = true

[connection signal="timeout" from="endingTimer" to="." method="ended"]
